# novel-writing-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  test_groq_quick.py
.github/workflows/: ci.yml
src/: __init__.py
src/core/: __init__.py  computational_narratology.py  emotional_valence_tracker.py  reversal_scene_generator.py  semantic_pacing_controller.py  temporal_structure_designer.py
src/engines/: __init__.py  computational_fantasy_engine.py
src/novel_writing_agents/: __init__.py
src/utils/: __init__.py  file_utils.py  visualization.py
tests/: test_basic_functionality.py
